--- a/GuestRegistrationWinForm/NLog.config
+++ b/GuestRegistrationWinForm/NLog.config
@@ -4,9 +4,9 @@
 xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
 
       
-xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
-<targets>
+  <targets>
     <file name="file"
            layout="${message}"
            fileName="${basedir}/logs/myApp.log"
