--- a/GuestRegistrationWinForm/NLog.config
+++ b/GuestRegistrationWinForm/NLog.config
@@ -1,23 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<NLog
- 
-xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
+<nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
+      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
-      
-xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-
+  <!-- Targets -->
   <targets>
-    <file name="file"
-           layout="${message}"
-           fileName="${basedir}/logs/myApp.log"
-           archiveFileName="${basedir}/archives/myApp.{#}.log"
-           archiveEvery="Day"
-           maxArchiveFiles="7"
-           archiveDateFormat="yyyy-MM"
-           deleteOldFilesOnStartup="true" />
+    <target name="file" xsi:type="File" fileName="${basedir}/logs/log.txt" />
+    <!-- You can customize the log file location and format as needed -->
   </targets>
 
+  <!-- Rules to apply the targets -->
   <rules>
-    <logger name="*" minLevel="Trace" writeTo="file" />
+    <logger name="*" minlevel="Trace" writeTo="file" />
   </rules>
-</NLog>
+</nlog>
