icon  from local

--- a/GuestRegistrationWinForm/GuestRegistrationWinForm.csproj
+++ b/GuestRegistrationWinForm/GuestRegistrationWinForm.csproj
@@ -217,5 +217,8 @@
   <ItemGroup>
     <None Include="Resources\icons8-history-30.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Visitor1.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
