--- a/GuestRegistrationWinForm/GuestRegistrationWinForm.csproj
+++ b/GuestRegistrationWinForm/GuestRegistrationWinForm.csproj
@@ -70,6 +70,12 @@
     <Compile Include="FormCard.Designer.cs">
       <DependentUpon>FormCard.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormCardRecovery.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormCardRecovery.Designer.cs">
+      <DependentUpon>FormCardRecovery.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormContractor.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -113,6 +119,9 @@
     <Compile Include="SingletonGenericClass.cs" />
     <EmbeddedResource Include="FormCard.resx">
       <DependentUpon>FormCard.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormCardRecovery.resx">
+      <DependentUpon>FormCardRecovery.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormContractor.resx">
       <DependentUpon>FormContractor.cs</DependentUpon>
